--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fontsource/roboto": "5.2.5",
     "@mdi/font": "7.4.47",
+    "axios": "^1.10.0",
     "vue": "^3.5.13",
     "vuetify": "^3.8.1"
   },
@@ -35,7 +36,7 @@
     "vite": "^6.2.2",
     "vite-plugin-vue-layouts-next": "^0.0.8",
     "vite-plugin-vuetify": "^2.1.1",
-    "vue-router": "^4.5.0",
+    "vue-router": "^4.5.1",
     "vue-tsc": "^2.2.8"
   }
 }
